tdf#79272 ooxmlimport: support strict dxa tblWidth

This patch is also required for tdf#78508.

ECMA-376-1:2016 indicates that MeasurementOrPercent
is a union of ST_DecimalNumberOrPercent and
ST_UniversalMeasure. For the elements that use
MeasurementOrPercent, that is represented as
1/50 of a percent or in Twips. This patch adds
support for the ST_UniversalMeasure component of
the union.

Change-Id: I1bac30707f118a3d1f0eab3c27f8dcec96470592
Reviewed-on: https://gerrit.libreoffice.org/43384
Tested-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Justin Luth <justin_luth@sil.org>